<?xml version="1.0"?>
<package format="3">
  <name>sensor_pub</name>
  <version>0.0.0</version>
  <description>Paquete ROS 2 para publicar temperatura</description>
  <maintainer email="tu@correo.com">Tu Nombre</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

